Se cambia el color y se le da estilos a los acordion-item

--- a/vistas/preguntas_frecuentes.html
+++ b/vistas/preguntas_frecuentes.html
@@ -41,13 +41,13 @@
             </ul>
         </div>
     </nav>
-    <main class="container py-3">
+    <main class="container py-3" data-aos="zoom-in-up" data-aos-duration="2000">
 
         <h2>Preguntas Frecuentes</h2>
 
         <main class="contenido-padding">
             <div class="acordion">
-                <div class="acordion-item">
+                <div class="acordion-item active">
                     <div class="acordion-header">¿Cómo comprar en VF Suplementos?</div>
                     <div class="acordion-content">
                         Agrega los productos que desees comprar al carrito de compra y luego completa los campos
@@ -100,33 +100,41 @@
                     <div class="acordion-header">¿Puedo cambiar o devolver un producto sin usar / sin abrir?</div>
                     <div class="acordion-content">
                         <p>
-                            Los productos sin uso y cerrados tienen un período de 30 días si quieres devolverlo o solicitar
-                            la devolución de tu dinero. Nuestro equipo te pedirá una fotografía, boleta y/o comprobante de
-                            compra del producto. Así podemos cambiar el producto por uno de igual o mayor valor. 
+                            Los productos sin uso y cerrados tienen un período de 30 días si quieres devolverlo o
+                            solicitar
+                            la devolución de tu dinero. Nuestro equipo te pedirá una fotografía, boleta y/o comprobante
+                            de
+                            compra del producto. Así podemos cambiar el producto por uno de igual o mayor valor.
                         </p>
                         <p>
                             Para devolver un producto, contáctenos enviando un correo electrónico a
-                            <strong>contacto@vfsuplementos.cl</strong> con su número de pedido y el motivo de su devolución.
+                            <strong>contacto@vfsuplementos.cl</strong> con su número de pedido y el motivo de su
+                            devolución.
                         </p>
                         <p>
                             Deberá asumir todos los costos asociados con la devolución de la mercancía. Nosotros nos
                             encargaremos de la gestión de la devolución de los productos.
                         </p>
                         <p>
-                            Cuando recibamos su envío, nos pondremos en contacto con usted acerca del cambio de producto.
+                            Cuando recibamos su envío, nos pondremos en contacto con usted acerca del cambio de
+                            producto.
                         </p>
                         <ul>
                             <li>
-                                Para que podamos efectuar el cambio o la devolución, los productos se deben encontrar sin uso,
-                                sin daños, con todos sus accesorios y embalajes originales. Además, es necesario que estos no
+                                Para que podamos efectuar el cambio o la devolución, los productos se deben encontrar
+                                sin uso,
+                                sin daños, con todos sus accesorios y embalajes originales. Además, es necesario que
+                                estos no
                                 hayan sido abiertos y que conserven su envase y sellos intactos.
                             </li>
                             <li>
-                                Todos los cambios y devoluciones serán autorizados una vez que nuestro equipo haya corroborado
+                                Todos los cambios y devoluciones serán autorizados una vez que nuestro equipo haya
+                                corroborado
                                 las condiciones antes mencionadas.
                             </li>
                             <li>
-                                El proceso de recepción y aprobación de un cambio y/o devolución, puede tardar hasta 5 días
+                                El proceso de recepción y aprobación de un cambio y/o devolución, puede tardar hasta 5
+                                días
                                 hábiles desde que recibimos tu producto.
                             </li>
                         </ul>
@@ -136,10 +144,15 @@
                     <div class="acordion-header">¿Qué debo hacer para devolver el producto?</div>
                     <div class="acordion-content">
                         <p>
-                            Para devolver un producto, contáctenos enviando un correo electrónico a contacto@chilesuplementos.cl con su número de pedido y el motivo de su devolución. Le responderemos con una confirmación de que hemos recibido su solicitud de devolución y nos contactaremos para informar cómo seguir con el proceso.
+                            Para devolver un producto, contáctenos enviando un correo electrónico a
+                            contacto@chilesuplementos.cl con su número de pedido y el motivo de su devolución. Le
+                            responderemos con una confirmación de que hemos recibido su solicitud de devolución y nos
+                            contactaremos para informar cómo seguir con el proceso.
                         </p>
                         <p>
-                            La devolución del producto sin costo asociado de envío aplica solo en el caso que un producto no cumpla con los estándares de calidad. Podemos ofrecer la alternativa de devolución de dinero, cambio por otro producto o por el mismo.
+                            La devolución del producto sin costo asociado de envío aplica solo en el caso que un
+                            producto no cumpla con los estándares de calidad. Podemos ofrecer la alternativa de
+                            devolución de dinero, cambio por otro producto o por el mismo.
                         </p>
                     </div>
                 </div>
@@ -147,10 +160,16 @@
                     <div class="acordion-header">¡Producto incorrecto / dañado / perdido! Qué hacer?</div>
                     <div class="acordion-content">
                         <p>
-                            Primero, nos disculpamos por cometer un error. Para evitar posibles errores, cada producto en bodega se inspecciona antes de ser embalado para su envío, pero desafortunadamente a veces ocurren errores. Sin embargo, estamos orgullosos del hecho de que en tales situaciones siempre reaccionamos rápidamente y tratamos de encontrar la mejor solución al problema.
+                            Primero, nos disculpamos por cometer un error. Para evitar posibles errores, cada producto
+                            en bodega se inspecciona antes de ser embalado para su envío, pero desafortunadamente a
+                            veces ocurren errores. Sin embargo, estamos orgullosos del hecho de que en tales situaciones
+                            siempre reaccionamos rápidamente y tratamos de encontrar la mejor solución al problema.
                         </p>
                         <p>
-                            En caso de que reciba un producto incorrecto (no corresponde al que compró) gestionaremos el cambio del producto que corresponde, asumiendo nosotros los costos de envíos asociados, solo debe avisarnos a <strong>contacto@vfuplementos.cl</strong>  y responderemos a la brevedad ofreciendo alternativas para solucionar el inconveniente lo más pronto posible.
+                            En caso de que reciba un producto incorrecto (no corresponde al que compró) gestionaremos el
+                            cambio del producto que corresponde, asumiendo nosotros los costos de envíos asociados, solo
+                            debe avisarnos a <strong>contacto@vfuplementos.cl</strong> y responderemos a la brevedad
+                            ofreciendo alternativas para solucionar el inconveniente lo más pronto posible.
                         </p>
                     </div>
                 </div>
