Se agrega un slider nativo con js y scss para darle más animaciones a la página

--- a/index.html
+++ b/index.html
@@ -162,7 +162,35 @@
                     acompañe en tus rutinas de entrenamiento, recuerda hidratarte mientras te ejercitas!</p>
             </div>
         </section>
-        <section class="section-marcas" data-aos="fade-right" data-aos-duration="1500">
+        <section class="contenedor-marcas">
+            <h4 class="texto-subrayado mt-5">Nuestras Marcas</h4>
+            <div class="carrusel centrar-h">
+                <div class="carrusel-container">
+                    <div class="carrusel-item">
+                        <img src="img/marcas-optimizado/gold-standart.jpg" class="img" alt="Slide 1">
+                    </div>
+                    <div class="carrusel-item">
+                        <img src="img/marcas-optimizado/hexacore.jpg" class="img" alt="Slide 2">
+                    </div>
+                    <div class="carrusel-item">
+                        <img src="img/marcas-optimizado/usn.jpg" class="img alt="Slide 3">
+                    </div>
+                    <div class="carrusel-item">
+                        <img src="img/marcas-optimizado/muscletech.png" class="img" alt="Slide 1">
+                    </div>
+                    <div class="carrusel-item">
+                        <img src="img/marcas-optimizado/rule-one.png" class="img" alt="Slide 2">
+                    </div>
+                    <div class="carrusel-item">
+                        <img src="img/marcas-optimizado/ultimate-nutrition.png" class="img alt="Slide 3">
+                    </div>
+                    <div class="carrusel-item">
+                        <img src="img/marcas-optimizado/winkler-nutrition.png" class="img" alt="Slide 2">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- <section class="section-marcas" data-aos="fade-right" data-aos-duration="1500">
             <div class="marca">
                 <div class="marca-image">
                     <img src="img/marcas-optimizado/hexacore.jpg" alt="" class="img producto-img">
@@ -211,7 +239,7 @@
                     <h3 class="text-card">USN</h3>
                 </div>
             </div>
-        </section>
+        </section> -->
     </main>
     <footer class="text-center text-lg-start text-muted bg-nav-footer">
         <section class="d-flex justify-content-center justify-content-lg-between p-4">
