--- a/vistas/marcas.html
+++ b/vistas/marcas.html
@@ -36,79 +36,35 @@
             </ul>
         </div>
     </nav>
-    <div class="container mt-5">
-        <nav aria-label="breadcrumb" class="contenedor-beadcrumb">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Marcas</li>
-            </ol>
-        </nav>
-        <h3 class="d-flex justify-content-center">Marcas</h3>
-        <div id="carouselExample" class="carousel slide mt-3 mb-3" data-ride="carousel" data-interval="3000">
-            <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="3000">
-                    <div class="d-flex justify-content-around card-deck">
-                        <div class="card h-80">
-                            <img class="img" src="../img/marcas-optimizado/gold-standart.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">Gold Standart</h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum repellendus dolor libero, omnis voluptatum et?</p>
-                            </div>
-                        </div>
-                        <div class="card h-100">
-                            <img class="img" src="../img/marcas-optimizado//hexacore.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">Hexacore</h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga blanditiis magnam nesciunt illum nobis adipisci.</p>
-                            </div>
-                        </div>
-                        <div class="card h-80">
-                            <img class="img" src="../img/marcas-optimizado//usn.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">USN</h5>
-                                <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente enim ut nihil ex a ad?</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
 
-                <div class="carousel-item" data-bs-interval="3000">
-                    <div class="d-flex justify-content-around card-deck">
-                        <div class="card h-100">
-                            <img class="img" src="../img/marcas-optimizado/muscletech.png" alt="Muscletech">
-                            <div class="card-body">
-                                <h5 class="card-title">Muscletech</h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus placeat minus eius ab, saepe molestias.</p>
-                            </div>
-                        </div>
-                        <div class="card h-100">
-                            <img class="img" src="../img/marcas-optimizado/rule-one.png" alt="Rule 1">
-                            <div class="card-body">
-                                <h5 class="card-title">Rule 1</h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe optio expedita hic ex, incidunt deserunt.</p>
-                            </div>
-                        </div>
-                        <div class="card h-100">
-                            <img class="img" src="../img/marcas-optimizado/ultimate-nutrition.png" alt="Ultimate Nutrition">
-                            <div class="card-body">
-                                <h5 class="card-title">Ultimate Nutrition</h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, perferendis. Unde aspernatur eos sunt corrupti!</p>
-                            </div>
-                        </div>
-                    </div>
+    <section class="contenedor-marcas">
+        <h4 class="texto-subrayado mt-5">Nuestras Marcas</h4>
+        <div class="carrusel centrar-h">
+            <div class="carrusel-container">
+                <div class="carrusel-item">
+                    <img src="../img/marcas-optimizado/gold-standart.jpg" class="img" alt="Slide 1">
                 </div>
-                
+                <div class="carrusel-item">
+                    <img src="../img/marcas-optimizado/hexacore.jpg" class="img" alt="Slide 2">
+                </div>
+                <div class="carrusel-item">
+                    <img src="../img/marcas-optimizado/usn.jpg" class="img alt="Slide 3">
+                </div>
+                <div class="carrusel-item">
+                    <img src="../img/marcas-optimizado/muscletech.png" class="img" alt="Slide 1">
+                </div>
+                <div class="carrusel-item">
+                    <img src="../img/marcas-optimizado/rule-one.png" class="img" alt="Slide 2">
+                </div>
+                <div class="carrusel-item">
+                    <img src="../img/marcas-optimizado/ultimate-nutrition.png" class="img alt="Slide 3">
+                </div>
+                <div class="carrusel-item">
+                    <img src="../img/marcas-optimizado/winkler-nutrition.png" class="img" alt="Slide 2">
+                </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Anterior</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExample" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Siguiente</span>
-            </a>
         </div>
-    </div>
+    </section>
 
     <footer class="text-center text-lg-start text-muted bg-nav-footer">
         <section class="d-flex justify-content-center justify-content-lg-between p-4">
