--- a/vistas/preguntas_frecuentes.html
+++ b/vistas/preguntas_frecuentes.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VF - Contacto</title>
+    <title>VF - Preguntas Frecuentes</title>
     <meta name="description"
         content="Ubícanos en el local N°150 dentro del Hotel Pucón, C. Clemente Holzapfel #190. Y en todas nuestras redes sociales, con el nombre de usuario @_vf_suplementos_">
     <meta name="keywords" content="VF Suplementos, @_vf_suplementos_">
@@ -45,7 +45,7 @@
 
         <h2>Preguntas Frecuentes</h2>
 
-        <main class="contenido-padding">
+        <section class="contenido-padding">
             <div class="acordion">
                 <div class="acordion-item active">
                     <div class="acordion-header">¿Cómo comprar en VF Suplementos?</div>
@@ -174,7 +174,35 @@
                     </div>
                 </div>
             </div>
-        </main>
+        </section>
+        <section class="contenedor-marcas">
+            <h4 class="texto-subrayado mt-5">Nuestras Marcas</h4>
+            <div class="carrusel centrar-h">
+                <div class="carrusel-container">
+                    <div class="carrusel-item">
+                        <img src="../img/marcas-optimizado/gold-standart.jpg" class="img" alt="Slide 1">
+                    </div>
+                    <div class="carrusel-item">
+                        <img src="../img/marcas-optimizado/hexacore.jpg" class="img" alt="Slide 2">
+                    </div>
+                    <div class="carrusel-item">
+                        <img src="../img/marcas-optimizado/usn.jpg" class="img alt=" Slide 3">
+                    </div>
+                    <div class="carrusel-item">
+                        <img src="../img/marcas-optimizado/muscletech.png" class="img" alt="Slide 1">
+                    </div>
+                    <div class="carrusel-item">
+                        <img src="../img/marcas-optimizado/rule-one.png" class="img" alt="Slide 2">
+                    </div>
+                    <div class="carrusel-item">
+                        <img src="../img/marcas-optimizado/ultimate-nutrition.png" class="img alt=" Slide 3">
+                    </div>
+                    <div class="carrusel-item">
+                        <img src="../img/marcas-optimizado/winkler-nutrition.png" class="img" alt="Slide 2">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="text-center text-lg-start text-muted bg-nav-footer">
         <section class="d-flex justify-content-center justify-content-lg-between p-4">
@@ -221,7 +249,6 @@
     </footer>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="../js/script.js"></script>
-
 </body>
 
 </html>
