--- a/vistas/productos.html
+++ b/vistas/productos.html
@@ -135,7 +135,35 @@
                     <button class="articulo-boton">Comprar</button>
                 </div>
             </div>
-        </section>      
+        </section>
+        <section class="contenedor-marcas">
+            <h4 class="texto-subrayado mt-5">Nuestras Marcas</h4>
+            <div class="carrusel centrar-h">
+                <div class="carrusel-container">
+                    <div class="carrusel-item">
+                        <img src="../img/marcas-optimizado/gold-standart.jpg" class="img" alt="Slide 1">
+                    </div>
+                    <div class="carrusel-item">
+                        <img src="../img/marcas-optimizado/hexacore.jpg" class="img" alt="Slide 2">
+                    </div>
+                    <div class="carrusel-item">
+                        <img src="../img/marcas-optimizado/usn.jpg" class="img alt="Slide 3">
+                    </div>
+                    <div class="carrusel-item">
+                        <img src="../img/marcas-optimizado/muscletech.png" class="img" alt="Slide 1">
+                    </div>
+                    <div class="carrusel-item">
+                        <img src="../img/marcas-optimizado/rule-one.png" class="img" alt="Slide 2">
+                    </div>
+                    <div class="carrusel-item">
+                        <img src="../img/marcas-optimizado/ultimate-nutrition.png" class="img alt="Slide 3">
+                    </div>
+                    <div class="carrusel-item">
+                        <img src="../img/marcas-optimizado/winkler-nutrition.png" class="img" alt="Slide 2">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer class="text-center text-lg-start text-muted bg-nav-footer">
