Se corrigen algunos alt y se eliminan imagenes no optimizadas para alivianar el proyecto

--- a/vistas/preguntas_frecuentes.html
+++ b/vistas/preguntas_frecuentes.html
@@ -180,25 +180,25 @@
             <div class="carrusel centrar-h">
                 <div class="carrusel-container">
                     <div class="carrusel-item">
-                        <img src="../img/marcas-optimizado/gold-standart.jpg" class="img" alt="Slide 1">
+                        <img src="../img/marcas-optimizado/gold-standart.jpg" class="img" alt="Optimum Nutrition">
                     </div>
                     <div class="carrusel-item">
-                        <img src="../img/marcas-optimizado/hexacore.jpg" class="img" alt="Slide 2">
+                        <img src="../img/marcas-optimizado/hexacore.jpg" class="img" alt="Hexacore">
                     </div>
                     <div class="carrusel-item">
-                        <img src="../img/marcas-optimizado/usn.jpg" class="img alt=" Slide 3">
+                        <img src="../img/marcas-optimizado/usn.jpg" class="img" alt="USN">
                     </div>
                     <div class="carrusel-item">
-                        <img src="../img/marcas-optimizado/muscletech.png" class="img" alt="Slide 1">
+                        <img src="../img/marcas-optimizado/muscletech.png" class="img" alt="Muscletech">
                     </div>
                     <div class="carrusel-item">
-                        <img src="../img/marcas-optimizado/rule-one.png" class="img" alt="Slide 2">
+                        <img src="../img/marcas-optimizado/rule-one.png" class="img" alt="Rule 1">
                     </div>
                     <div class="carrusel-item">
-                        <img src="../img/marcas-optimizado/ultimate-nutrition.png" class="img alt=" Slide 3">
+                        <img src="../img/marcas-optimizado/ultimate-nutrition.png" class="img" alt="Ultimate Nutrition">
                     </div>
                     <div class="carrusel-item">
-                        <img src="../img/marcas-optimizado/winkler-nutrition.png" class="img" alt="Slide 2">
+                        <img src="../img/marcas-optimizado/winkler-nutrition.png" class="img" alt="Winkler Nutrition">
                     </div>
                 </div>
             </div>
