--- a/vistas/marcas.html
+++ b/vistas/marcas.html
@@ -39,7 +39,7 @@
     <section class="container container-principal mt-2" data-aos="zoom-out-up" data-aos-duration="3000">
         <img src="../img/sections/workout.jpg" class="img-principal" alt="Imagen principal">
     </section>
-    <section class="contenedor-marcas">
+    <section class="contenedor-marcas mt-5 px-4">
         <h4 class="texto-subrayado mt-5">Nuestras Marcas</h4>
         <p class="p-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, qui minus. Perspiciatis voluptatibus expedita consequuntur iusto magnam nulla quos consequatur ratione reiciendis error debitis hic vitae perferendis temporibus, sed eveniet eum aliquam voluptatem non rerum minus, consectetur sit. Vel, odit! Dignissimos soluta pariatur molestiae, voluptatum sint amet necessitatibus laborum quia doloribus quis aspernatur ut accusamus beatae explicabo nihil itaque esse dolorem blanditiis at. Numquam magni recusandae ipsa quaerat dolores quasi est, tenetur ab assumenda explicabo rerum sint quam praesentium minus nihil incidunt repellat voluptas totam. Iure, inventore optio placeat porro fugiat eos, reprehenderit eum totam aperiam veritatis, ullam at corporis?</p>
         <div class="carrusel centrar-h">
