Se modifica la vista de de marcas

--- a/vistas/marcas.html
+++ b/vistas/marcas.html
@@ -39,35 +39,51 @@
     <section class="container container-principal mt-2" data-aos="zoom-out-up" data-aos-duration="3000">
         <img src="../img/sections/workout.jpg" class="img-principal" alt="Imagen principal">
     </section>
-    <section class="contenedor-marcas mt-5 px-4">
-        <h4 class="texto-subrayado mt-5">Nuestras Marcas</h4>
-        <p class="p-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, qui minus. Perspiciatis voluptatibus expedita consequuntur iusto magnam nulla quos consequatur ratione reiciendis error debitis hic vitae perferendis temporibus, sed eveniet eum aliquam voluptatem non rerum minus, consectetur sit. Vel, odit! Dignissimos soluta pariatur molestiae, voluptatum sint amet necessitatibus laborum quia doloribus quis aspernatur ut accusamus beatae explicabo nihil itaque esse dolorem blanditiis at. Numquam magni recusandae ipsa quaerat dolores quasi est, tenetur ab assumenda explicabo rerum sint quam praesentium minus nihil incidunt repellat voluptas totam. Iure, inventore optio placeat porro fugiat eos, reprehenderit eum totam aperiam veritatis, ullam at corporis?</p>
-        <div class="carrusel centrar-h">
-            <div class="carrusel-container">
-                <div class="carrusel-item">
-                    <img src="../img/marcas-optimizado/gold-standart.jpg" class="img" alt="Optimum Nutrition">
-                </div>
-                <div class="carrusel-item">
-                    <img src="../img/marcas-optimizado/hexacore.jpg" class="img" alt="Hexacore">
-                </div>
-                <div class="carrusel-item">
-                    <img src="../img/marcas-optimizado/usn.jpg" class="img" alt="USN">
-                </div>
-                <div class="carrusel-item">
-                    <img src="../img/marcas-optimizado/muscletech.png" class="img" alt="Muscletech">
-                </div>
-                <div class="carrusel-item">
-                    <img src="../img/marcas-optimizado/rule-one.png" class="img" alt="Rule 1">
-                </div>
-                <div class="carrusel-item">
-                    <img src="../img/marcas-optimizado/ultimate-nutrition.png" class="img" alt="Ultimate Nutrition">
-                </div>
-                <div class="carrusel-item">
-                    <img src="../img/marcas-optimizado/winkler-nutrition.png" class="img" alt="Winkler Nutrition">
-                </div>
+    <main class="mt-4" data-aos="zoom-out-up" data-aos-duration="3000">
+        <section class="info-marca">
+            <div>
+                <h2>Optimum Nutrition</h2>
+                <p>Por más. Durante 30 años, <strong>Optimum Nutrition®</strong> ha sido la marca en la que confían los atletas profesionales y los entusiastas del gimnasio. Todo el mundo tiene objetivos: permítanos ayudarle a alcanzar los suyos.</p>
             </div>
-        </div>
-    </section>
+            <img class="img_animate" src="../img/marcas-optimizado/gold-standart.jpg" alt="Optimum Nutrition">
+        </section>
+        <section class="info-marca">
+            <div>
+                <h2>USN</h2>
+                <p>Durante más de 20 años, USN se ha comprometido a apoyar todos los estilos de vida de fitness a través de nuestro incesante equipo de innovación, investigación y desarrollo. Los productos de USN ofrecen transparencia total en las etiquetas y potentes dosis de ingredientes clínicamente investigados, patentados y con licencia.</p>
+            </div>
+            <img src="../img/marcas-optimizado/usn.jpg" class="img_animate" alt="USN">
+        </section>
+        <section class="info-marca">
+            <div>
+                <h2>Muscletech</h2>
+                <p>Como marca líder en el espacio de la nutrición científica, <strong>MuscleTech®</strong> tiene una rica historia de asociación con investigadores de primer nivel para patrocinar investigaciones científicas y descubrimientos novedosos. Siempre hemos estado interesados en desarrollar productos respaldados científicamente y trabajar con los mejores científicos para mejorar nuestra comprensión de los ingredientes clave que benefician a innumerables atletas, entusiastas del fitness y culturistas.</p>
+            </div>
+            <img src="../img/marcas-optimizado/muscletech.png" class="img_animate" alt="Muscletech">
+        </section>
+        <section class="info-marca">
+            <div>
+                <h2>Rule 1</h2>
+                <p><strong>QUALITY IS RULE 1</strong>.</p>
+                <p>Como una de las pocas marcas que realmente fabrica las fórmulas avanzadas que lanzamos al mercado, <strong>Rule 1 Proteins</strong> se encuentra en una posición única para mantener un control total en cada paso del proceso. Desde el abastecimiento de ingredientes hasta la mezcla y el envasado, y la inspección del producto final. Nunca se deja nada al azar. Lo que es igualmente importante, la fabricación interna también nos permite ofrecer una nutrición de rendimiento incomparable a un precio increíble.</p>
+            </div>
+            <img src="../img/marcas-optimizado/rule-one.png" class="img_animate" alt="Rule 1">
+        </section>
+        <section class="info-marca">
+            <div>
+                <h2>Ultimate Nutrition</h2>
+                <p>Nuestro equipo de científicos expertos, formuladores y químicos de sabores se unen para desarrollar fórmulas avanzadas y efectivas para ayudar a aumentar los músculos, estimular la pérdida de peso, mejorar la salud y el bienestar y aumentar el rendimiento.</p>
+            </div>
+            <img src="../img/marcas-optimizado/ultimate-nutrition.png" class="img_animate" alt="Ultimate Nutrition">
+        </section>
+        <section class="info-marca">
+            <div>
+                <h2>Winkler Nutrition</h2>
+                <p>Somos una empresa nacional dedicada a desarrollar, elaborar y comercializar una amplia gama de suplementos deportivos, nutricionales y alimentarios de última generación y de alta calidad para todo tipo de deportistas y/o personas que quieran llevar una vida sana, mejorar su rendimiento deportivo e imagen.</p>
+            </div>
+            <img src="../img/marcas-optimizado/winkler-nutrition2.png" class="img_animate" alt="Winkler Nutrition">
+        </section>
+    </main>
 
     <footer class="text-center text-lg-start text-muted bg-nav-footer">
         <section class="d-flex justify-content-center justify-content-lg-between p-4">
