Se modifica el footer en las vistas

--- a/vistas/preguntas_frecuentes.html
+++ b/vistas/preguntas_frecuentes.html
@@ -175,41 +175,13 @@
                 </div>
             </div>
         </section>
-        <section class="contenedor-marcas">
-            <h4 class="texto-subrayado mt-5">Nuestras Marcas</h4>
-            <div class="carrusel centrar-h">
-                <div class="carrusel-container">
-                    <div class="carrusel-item">
-                        <img src="../img/marcas-optimizado/gold-standart.jpg" class="img" alt="Optimum Nutrition">
-                    </div>
-                    <div class="carrusel-item">
-                        <img src="../img/marcas-optimizado/hexacore.jpg" class="img" alt="Hexacore">
-                    </div>
-                    <div class="carrusel-item">
-                        <img src="../img/marcas-optimizado/usn.jpg" class="img" alt="USN">
-                    </div>
-                    <div class="carrusel-item">
-                        <img src="../img/marcas-optimizado/muscletech.png" class="img" alt="Muscletech">
-                    </div>
-                    <div class="carrusel-item">
-                        <img src="../img/marcas-optimizado/rule-one.png" class="img" alt="Rule 1">
-                    </div>
-                    <div class="carrusel-item">
-                        <img src="../img/marcas-optimizado/ultimate-nutrition.png" class="img" alt="Ultimate Nutrition">
-                    </div>
-                    <div class="carrusel-item">
-                        <img src="../img/marcas-optimizado/winkler-nutrition.png" class="img" alt="Winkler Nutrition">
-                    </div>
-                </div>
-            </div>
-        </section>
     </main>
     <footer class="text-center text-lg-start text-muted bg-nav-footer">
         <section class="d-flex justify-content-center justify-content-lg-between p-4">
-            <div class="me-5 d-none d-lg-block">
+            <div class="me-5 d-none d-lg-block" data-aos="fade-up" data-aos-duration="1500">
                 <span class="texto-nav-footer">Síguenos en nuestras tedes sociales</span>
             </div>
-            <div class="texto-nav-footer">
+            <div class="texto-nav-footer" data-aos="fade-up" data-aos-duration="1500">
                 <a href="#" class="me-4 text-reset"> <i class="fab fa-facebook-f"></i> </a>
                 <a href="#" class="me-4 text-reset"> <i class="fab fa-twitter"></i> </a>
                 <a href="#" class="me-4 text-reset"> <i class="fab fa-google"></i> </a>
@@ -218,24 +190,21 @@
                 <a href="#" class="me-4 text-reset"> <i class="fab fa-github"></i> </a>
             </div>
         </section>
-        <section class="">
-            <div class="container text-center text-md-start mt-5">
+        <section>
+            <div class="container text-center d-flex justify-content-center text-md-start mt-5">
                 <div class="row mt-3">
-                    <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-2">
-                        <h2 class="text-uppercase fw-bold mb-4 texto-nav-footer">VF</h2>
-                    </div>
-                    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <div class="col-md-2 col-lg-2 col-xl-5 mx-auto mb-4">
                         <h6 class="text-uppercase fw-bold mb-4 texto-nav-footer"> ¿Quiénes Somos? </h6>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate repudiandae commodi
-                            recusandae repellendus, ratione voluptatum perferendis, dolore perspiciatis, ipsam officiis
-                            suscipit repellat eligendi minus corrupti iusto quibusdam molestiae expedita voluptatem?</p>
+                        <p>VF Suplementos nace el 2020 en Pucón, en un comienzo con la venta exclusiva de suplementos de
+                            marcas chilenas, para luego expandir la gama de productos a las mejores marcas
+                            internacionales. Hoy en día, somos importadores directos y representantes exclusivos de
+                            marcas líderes en suplementos.</p>
 
                     </div>
-                    <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-                        <h6 class="text-uppercase fw-bold mb-4 texto-nav-footer">. . .</h6>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo iste eius at, sequi error odio
-                            quod vel ut voluptas, quia ea quam saepe enim atque neque explicabo voluptatum magni
-                            reiciendis.</p>
+                    <div class="col-md-3 col-lg-2 col-xl-4 mx-auto mb-4">
+                        <h6 class="text-uppercase fw-bold mb-4 texto-nav-footer">Te promocionamos!</h6>
+                        <p>Si eres una marca que necesita ser promocionada, contáctanos al correo:
+                            promocion.correo@gmail.com</p>
                     </div>
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                         <h6 class="text-uppercase fw-bold mb-4 texto-nav-footer">Contacto</h6>
