--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </ul>
         </div>
     </nav>
-    <section class="container container-principal mt-2" data-aos="zoom-out-up" data-aos-duration="3000">
+    <section class="container container-principal mt-2" data-aos="zoom-up" data-aos-duration="3000">
         <img src="img/principal-optimizado/home.jpg" class="img-principal" alt="Imagen principal">
     </section>
     <main class="container mt-5">
@@ -78,7 +78,7 @@
 
         </section>
         <section class="contenedor-articulos">
-            <div class="aviso" data-aos="fade-right" data-aos-duration="2000">
+            <div class="aviso" data-aos="fade-up" data-aos-duration="2000">
                 <div class="aviso-image">
                     <img src="img/sections/aviso-importante.jpg" alt="Recomendaciones" class="img_animate">
                 </div>
@@ -88,7 +88,7 @@
                         asperiores doloribus aperiam?</p>
                 </div>
             </div>
-            <div class="aviso" data-aos="fade-left" data-aos-duration="2000">
+            <div class="aviso" data-aos="fade-up" data-aos-duration="2000">
                 <div class="aviso-image">
                     <img src="img/sections/aviso-envios.jpg" alt="Envios y entregas" class="img_animate">
                 </div>
@@ -198,24 +198,21 @@
                 <a href="#" class="me-4 text-reset"> <i class="fab fa-github"></i> </a>
             </div>
         </section>
-        <section class="">
+        <section>
             <div class="container text-center d-flex justify-content-center text-md-start mt-5">
                 <div class="row mt-3">
-                    <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-2 f-title">
-                        <h2 class="text-uppercase fw-bold mb-4 texto-nav-footer">VF</h2>
-                    </div>
-                    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <div class="col-md-2 col-lg-2 col-xl-5 mx-auto mb-4">
                         <h6 class="text-uppercase fw-bold mb-4 texto-nav-footer"> ¿Quiénes Somos? </h6>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate repudiandae commodi
-                            recusandae repellendus, ratione voluptatum perferendis, dolore perspiciatis, ipsam officiis
-                            suscipit repellat eligendi minus corrupti iusto quibusdam molestiae expedita voluptatem?</p>
+                        <p>VF Suplementos nace el 2020 en Pucón, en un comienzo con la venta exclusiva de suplementos de
+                            marcas chilenas, para luego expandir la gama de productos a las mejores marcas
+                            internacionales. Hoy en día, somos importadores directos y representantes exclusivos de
+                            marcas líderes en suplementos.</p>
 
                     </div>
-                    <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-                        <h6 class="text-uppercase fw-bold mb-4 texto-nav-footer">. . .</h6>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo iste eius at, sequi error odio
-                            quod vel ut voluptas, quia ea quam saepe enim atque neque explicabo voluptatum magni
-                            reiciendis.</p>
+                    <div class="col-md-3 col-lg-2 col-xl-4 mx-auto mb-4">
+                        <h6 class="text-uppercase fw-bold mb-4 texto-nav-footer">Te promocionamos!</h6>
+                        <p>Si eres una marca que necesita ser promocionada, contáctanos al correo:
+                            promocion.correo@gmail.com</p>
                     </div>
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                         <h6 class="text-uppercase fw-bold mb-4 texto-nav-footer">Contacto</h6>
