--- a/vistas/contacto.html
+++ b/vistas/contacto.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VF - Contacto</title>
-    <meta name="description" content="Ubícanos en el local N°150 dentro del Hotel Pucón, C. Clemente Holzapfel #190. Y en todas nuestras redes sociales, con el nombre de usuario @_vf_suplementos_">
+    <meta name="description"
+        content="Ubícanos en el local N°150 dentro del Hotel Pucón, C. Clemente Holzapfel #190. Y en todas nuestras redes sociales, con el nombre de usuario @_vf_suplementos_">
     <meta name="keywords" content="VF Suplementos, @_vf_suplementos_">
     <!-- Icono -->
     <link rel="icon" type="image/png" href="../img/icon/icono.png">
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!-- FontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- AOS -->
@@ -18,9 +21,12 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
+
 <body>
     <nav class="navbar">
-        <a href="../index.html" class="titulo-nav link-item"><h2>VF</h2></a>
+        <a href="../index.html" class="titulo-nav link-item">
+            <h2>VF</h2>
+        </a>
         <a href="#" class="toggle-button">
             <i class="fa fa-bars" style="font-size: 35px;"></i>
         </a>
@@ -34,38 +40,45 @@
             </ul>
         </div>
     </nav>
-    <main class="container py-3">
+    <main class="contenedor-contacto">
         <h2>Formulario de Contacto</h2>
-        <form action="#" class="px-5 py-5">
-            <div class="form-group my-2">
-                <label for="nombre_completo">Nombre Completo</label>
-                <input name="nombre_completo" type="text" class="form-control" placeholder="Ingresa tu nombre ...">
+        <section class="section-contacto">
+            <form action="#">
+                <div class="form-group my-2">
+                    <label for="nombre_completo">Nombre Completo</label>
+                    <input name="nombre_completo" type="text" class="form-control" placeholder="Ingresa tu nombre ...">
+                </div>
+                <div class="form-group my-2">
+                    <label for="correo">Correo Electrónico</label>
+                    <input name="correo" type="email" class="form-control" placeholder="Ingresa tu correo ...">
+                </div>
+                <div class="form-group my-2">
+                    <label for="ciudad">Ciudad</label>
+                    <input name="ciudad" type="text" class="form-control"
+                        placeholder="Ingresa tu número de teléfono ...">
+                </div>
+                <div class="form-group my-2">
+                    <label for="consulta">Duda / Consulta</label>
+                    <textarea name="consulta" class="form-control" cols="100" rows="4"
+                        placeholder="Cuéntanos ..."></textarea>
+                </div>
+                <div class="form-group my-2 d-flex justify-content-end">
+                    <button class="boton-cuenta mx-auto">Enviar</button>
+                </div>
+            </form>
+            <div class="iframe">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3088.6947815180297!2d-71.98056642397356!3d-39.27249131880792!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x96147f40df00576d%3A0xc4f281cfaeab4cf1!2sHotel%20Enjoy%20Puc%C3%B3n!5e0!3m2!1ses-419!2scl!4v1691974854272!5m2!1ses-419!2scl"
+                    frameborder="0"></iframe>
             </div>
-            <div class="form-group my-2">
-                <label for="correo">Correo Electrónico</label>
-                <input name="correo" type="email" class="form-control" placeholder="Ingresa tu correo ...">
-            </div>
-            <div class="form-group my-2">
-                <label for="ciudad">Ciudad</label>
-                <input name="ciudad" type="text" class="form-control" placeholder="Ingresa tu número de teléfono ...">
-            </div>
-            <div class="form-group my-2">
-                <label for="consulta">Duda / Consulta</label>
-                <textarea name="consulta" class="form-control" cols="100" rows="2" placeholder="Cuéntanos ..."></textarea>
-            </div>
-            <div class="form-group my-2 d-flex justify-content-end">
-                <button class="btn btn-outline-primary justify-content-end">Enviar</button>
-            </div>
-        </form>
-        <h6>Encuéntranos en: </h6>
-        <iframe class="justify-content-center" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3088.6947815180297!2d-71.98056642397356!3d-39.27249131880792!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x96147f40df00576d%3A0xc4f281cfaeab4cf1!2sHotel%20Enjoy%20Puc%C3%B3n!5e0!3m2!1ses-419!2scl!4v1691974854272!5m2!1ses-419!2scl" width="100%" height="400" frameborder="0"></iframe>
+        </section>
     </main>
     <footer class="text-center text-lg-start text-muted bg-nav-footer">
         <section class="d-flex justify-content-center justify-content-lg-between p-4">
-            <div class="me-5 d-none d-lg-block">
+            <div class="me-5 d-none d-lg-block" data-aos="fade-up" data-aos-duration="1500">
                 <span class="texto-nav-footer">Síguenos en nuestras tedes sociales</span>
             </div>
-            <div class="texto-nav-footer">
+            <div class="texto-nav-footer" data-aos="fade-up" data-aos-duration="1500">
                 <a href="#" class="me-4 text-reset"> <i class="fab fa-facebook-f"></i> </a>
                 <a href="#" class="me-4 text-reset"> <i class="fab fa-twitter"></i> </a>
                 <a href="#" class="me-4 text-reset"> <i class="fab fa-google"></i> </a>
@@ -73,28 +86,29 @@
                 <a href="#" class="me-4 text-reset"> <i class="fab fa-linkedin"></i> </a>
                 <a href="#" class="me-4 text-reset"> <i class="fab fa-github"></i> </a>
             </div>
-            </section>
-            <section class="">
-            <div class="container text-center text-md-start mt-5">
+        </section>
+        <section>
+            <div class="container text-center d-flex justify-content-center text-md-start mt-5">
                 <div class="row mt-3">
-                <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-2">
-                    <h2 class="text-uppercase fw-bold mb-4 texto-nav-footer">VF</h2>
-                </div>
-                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-                    <h6 class="text-uppercase fw-bold mb-4 texto-nav-footer"> ¿Quiénes Somos? </h6>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate repudiandae commodi recusandae repellendus, ratione voluptatum perferendis, dolore perspiciatis, ipsam officiis suscipit repellat eligendi minus corrupti iusto quibusdam molestiae expedita voluptatem?</p>
-                    
-                </div>
-                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-                    <h6 class="text-uppercase fw-bold mb-4 texto-nav-footer">. . .</h6>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo iste eius at, sequi error odio quod vel ut voluptas, quia ea quam saepe enim atque neque explicabo voluptatum magni reiciendis.</p>
-                </div>
-                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-                    <h6 class="text-uppercase fw-bold mb-4 texto-nav-footer">Contacto</h6>
-                    <p><i class="fas fa-home me-3"></i> Pucón, Chile</p>
-                    <p><i class="fas fa-envelope me-3"></i>correo@gmail.com</p>
-                    <p><i class="fas fa-phone me-3"></i> + 569 87654321</p>
-                </div>
+                    <div class="col-md-2 col-lg-2 col-xl-5 mx-auto mb-4">
+                        <h6 class="text-uppercase fw-bold mb-4 texto-nav-footer"> ¿Quiénes Somos? </h6>
+                        <p>VF Suplementos nace el 2020 en Pucón, en un comienzo con la venta exclusiva de suplementos de
+                            marcas chilenas, para luego expandir la gama de productos a las mejores marcas
+                            internacionales. Hoy en día, somos importadores directos y representantes exclusivos de
+                            marcas líderes en suplementos.</p>
+
+                    </div>
+                    <div class="col-md-3 col-lg-2 col-xl-4 mx-auto mb-4">
+                        <h6 class="text-uppercase fw-bold mb-4 texto-nav-footer">Te promocionamos!</h6>
+                        <p>Si eres una marca que necesita ser promocionada, contáctanos al correo:
+                            promocion.correo@gmail.com</p>
+                    </div>
+                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                        <h6 class="text-uppercase fw-bold mb-4 texto-nav-footer">Contacto</h6>
+                        <p><i class="fas fa-home me-3"></i> Pucón, Chile</p>
+                        <p><i class="fas fa-envelope me-3"></i>correo@gmail.com</p>
+                        <p><i class="fas fa-phone me-3"></i> + 569 87654321</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -102,4 +116,5 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="../js/script.js"></script>
 </body>
+
 </html>
