--- a/vistas/marcas.html
+++ b/vistas/marcas.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VF - Marcas</title>
-    <meta name="description" content="Variedad de marcas en nuestra gran selección de productos, entre ellas: Winkler Nutrition, USN, Universal, Muscletech, Rule 1, Gold Standart, entre otras.">
-    <meta name="keywords" content="Gold Standart, Winkler Nutrition, Rule 1, Muscletech, Universal, UP, Suplementos, Suplementos Deportivos">
+    <meta name="description"
+        content="Variedad de marcas en nuestra gran selección de productos, entre ellas: Winkler Nutrition, USN, Universal, Muscletech, Rule 1, Gold Standart, entre otras.">
+    <meta name="keywords"
+        content="Gold Standart, Winkler Nutrition, Rule 1, Muscletech, Universal, UP, Suplementos, Suplementos Deportivos">
     <!-- Icono -->
     <link rel="icon" type="image/png" href="../img/icon/icono.png">
     <!-- Bootstrap -->
@@ -22,7 +24,9 @@
 
 <body>
     <nav class="navbar">
-        <a href="../index.html" class="titulo-nav link-item"><h2>VF</h2></a>
+        <a href="../index.html" class="titulo-nav link-item">
+            <h2>VF</h2>
+        </a>
         <a href="#" class="toggle-button">
             <i class="fa fa-bars" style="font-size: 35px;"></i>
         </a>
@@ -36,28 +40,38 @@
             </ul>
         </div>
     </nav>
-    <section class="container container-principal mt-2" data-aos="zoom-out-up" data-aos-duration="3000">
+    <section class="container container-principal mt-2" data-aos="fade-up" data-aos-duration="3000">
         <img src="../img/sections/workout.jpg" class="img-principal" alt="Imagen principal">
     </section>
-    <main class="mt-4" data-aos="zoom-out-up" data-aos-duration="3000">
+    <main class="mt-4" data-aos="fade-up" data-aos-duration="3000">
         <section class="info-marca">
             <div>
                 <h2>Optimum Nutrition</h2>
-                <p>Por más. Durante 30 años, <strong>Optimum Nutrition®</strong> ha sido la marca en la que confían los atletas profesionales y los entusiastas del gimnasio. Todo el mundo tiene objetivos: permítanos ayudarle a alcanzar los suyos.</p>
+                <p>Por más. Durante 30 años, <strong>Optimum Nutrition®</strong> ha sido la marca en la que confían los
+                    atletas profesionales y los entusiastas del gimnasio. Todo el mundo tiene objetivos: permítanos
+                    ayudarle a alcanzar los suyos.</p>
             </div>
             <img class="img_animate" src="../img/marcas-optimizado/gold-standart.jpg" alt="Optimum Nutrition">
         </section>
         <section class="info-marca">
             <div>
                 <h2>USN</h2>
-                <p>Durante más de 20 años, USN se ha comprometido a apoyar todos los estilos de vida de fitness a través de nuestro incesante equipo de innovación, investigación y desarrollo. Los productos de USN ofrecen transparencia total en las etiquetas y potentes dosis de ingredientes clínicamente investigados, patentados y con licencia.</p>
+                <p>Durante más de 20 años, USN se ha comprometido a apoyar todos los estilos de vida de fitness a través
+                    de nuestro incesante equipo de innovación, investigación y desarrollo. Los productos de USN ofrecen
+                    transparencia total en las etiquetas y potentes dosis de ingredientes clínicamente investigados,
+                    patentados y con licencia.</p>
             </div>
             <img src="../img/marcas-optimizado/usn.jpg" class="img_animate" alt="USN">
         </section>
         <section class="info-marca">
             <div>
                 <h2>Muscletech</h2>
-                <p>Como marca líder en el espacio de la nutrición científica, <strong>MuscleTech®</strong> tiene una rica historia de asociación con investigadores de primer nivel para patrocinar investigaciones científicas y descubrimientos novedosos. Siempre hemos estado interesados en desarrollar productos respaldados científicamente y trabajar con los mejores científicos para mejorar nuestra comprensión de los ingredientes clave que benefician a innumerables atletas, entusiastas del fitness y culturistas.</p>
+                <p>Como marca líder en el espacio de la nutrición científica, <strong>MuscleTech®</strong> tiene una
+                    rica historia de asociación con investigadores de primer nivel para patrocinar investigaciones
+                    científicas y descubrimientos novedosos. Siempre hemos estado interesados en desarrollar productos
+                    respaldados científicamente y trabajar con los mejores científicos para mejorar nuestra comprensión
+                    de los ingredientes clave que benefician a innumerables atletas, entusiastas del fitness y
+                    culturistas.</p>
             </div>
             <img src="../img/marcas-optimizado/muscletech.png" class="img_animate" alt="Muscletech">
         </section>
@@ -65,21 +79,31 @@
             <div>
                 <h2>Rule 1</h2>
                 <p><strong>QUALITY IS RULE 1</strong>.</p>
-                <p>Como una de las pocas marcas que realmente fabrica las fórmulas avanzadas que lanzamos al mercado, <strong>Rule 1 Proteins</strong> se encuentra en una posición única para mantener un control total en cada paso del proceso. Desde el abastecimiento de ingredientes hasta la mezcla y el envasado, y la inspección del producto final. Nunca se deja nada al azar. Lo que es igualmente importante, la fabricación interna también nos permite ofrecer una nutrición de rendimiento incomparable a un precio increíble.</p>
+                <p>Como una de las pocas marcas que realmente fabrica las fórmulas avanzadas que lanzamos al mercado,
+                    <strong>Rule 1 Proteins</strong> se encuentra en una posición única para mantener un control total
+                    en cada paso del proceso. Desde el abastecimiento de ingredientes hasta la mezcla y el envasado, y
+                    la inspección del producto final. Nunca se deja nada al azar. Lo que es igualmente importante, la
+                    fabricación interna también nos permite ofrecer una nutrición de rendimiento incomparable a un
+                    precio increíble.</p>
             </div>
             <img src="../img/marcas-optimizado/rule-one.png" class="img_animate" alt="Rule 1">
         </section>
         <section class="info-marca">
             <div>
                 <h2>Ultimate Nutrition</h2>
-                <p>Nuestro equipo de científicos expertos, formuladores y químicos de sabores se unen para desarrollar fórmulas avanzadas y efectivas para ayudar a aumentar los músculos, estimular la pérdida de peso, mejorar la salud y el bienestar y aumentar el rendimiento.</p>
+                <p>Nuestro equipo de científicos expertos, formuladores y químicos de sabores se unen para desarrollar
+                    fórmulas avanzadas y efectivas para ayudar a aumentar los músculos, estimular la pérdida de peso,
+                    mejorar la salud y el bienestar y aumentar el rendimiento.</p>
             </div>
             <img src="../img/marcas-optimizado/ultimate-nutrition.png" class="img_animate" alt="Ultimate Nutrition">
         </section>
         <section class="info-marca">
             <div>
                 <h2>Winkler Nutrition</h2>
-                <p>Somos una empresa nacional dedicada a desarrollar, elaborar y comercializar una amplia gama de suplementos deportivos, nutricionales y alimentarios de última generación y de alta calidad para todo tipo de deportistas y/o personas que quieran llevar una vida sana, mejorar su rendimiento deportivo e imagen.</p>
+                <p>Somos una empresa nacional dedicada a desarrollar, elaborar y comercializar una amplia gama de
+                    suplementos deportivos, nutricionales y alimentarios de última generación y de alta calidad para
+                    todo tipo de deportistas y/o personas que quieran llevar una vida sana, mejorar su rendimiento
+                    deportivo e imagen.</p>
             </div>
             <img src="../img/marcas-optimizado/winkler-nutrition2.png" class="img_animate" alt="Winkler Nutrition">
         </section>
@@ -87,10 +111,10 @@
 
     <footer class="text-center text-lg-start text-muted bg-nav-footer">
         <section class="d-flex justify-content-center justify-content-lg-between p-4">
-            <div class="me-5 d-none d-lg-block">
+            <div class="me-5 d-none d-lg-block" data-aos="fade-up" data-aos-duration="1500">
                 <span class="texto-nav-footer">Síguenos en nuestras tedes sociales</span>
             </div>
-            <div class="texto-nav-footer">
+            <div class="texto-nav-footer" data-aos="fade-up" data-aos-duration="1500">
                 <a href="#" class="me-4 text-reset"> <i class="fab fa-facebook-f"></i> </a>
                 <a href="#" class="me-4 text-reset"> <i class="fab fa-twitter"></i> </a>
                 <a href="#" class="me-4 text-reset"> <i class="fab fa-google"></i> </a>
@@ -99,24 +123,21 @@
                 <a href="#" class="me-4 text-reset"> <i class="fab fa-github"></i> </a>
             </div>
         </section>
-        <section class="">
+        <section>
             <div class="container text-center d-flex justify-content-center text-md-start mt-5">
                 <div class="row mt-3">
-                    <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-2 f-title">
-                        <h2 class="text-uppercase fw-bold mb-4 texto-nav-footer">VF</h2>
-                    </div>
-                    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <div class="col-md-2 col-lg-2 col-xl-5 mx-auto mb-4">
                         <h6 class="text-uppercase fw-bold mb-4 texto-nav-footer"> ¿Quiénes Somos? </h6>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate repudiandae commodi
-                            recusandae repellendus, ratione voluptatum perferendis, dolore perspiciatis, ipsam officiis
-                            suscipit repellat eligendi minus corrupti iusto quibusdam molestiae expedita voluptatem?</p>
+                        <p>VF Suplementos nace el 2020 en Pucón, en un comienzo con la venta exclusiva de suplementos de
+                            marcas chilenas, para luego expandir la gama de productos a las mejores marcas
+                            internacionales. Hoy en día, somos importadores directos y representantes exclusivos de
+                            marcas líderes en suplementos.</p>
 
                     </div>
-                    <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-                        <h6 class="text-uppercase fw-bold mb-4 texto-nav-footer">. . .</h6>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo iste eius at, sequi error odio
-                            quod vel ut voluptas, quia ea quam saepe enim atque neque explicabo voluptatum magni
-                            reiciendis.</p>
+                    <div class="col-md-3 col-lg-2 col-xl-4 mx-auto mb-4">
+                        <h6 class="text-uppercase fw-bold mb-4 texto-nav-footer">Te promocionamos!</h6>
+                        <p>Si eres una marca que necesita ser promocionada, contáctanos al correo:
+                            promocion.correo@gmail.com</p>
                     </div>
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                         <h6 class="text-uppercase fw-bold mb-4 texto-nav-footer">Contacto</h6>
