--- a/vistas/productos.html
+++ b/vistas/productos.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VF - Productos</title>
-    <meta name="description" content="Encuentra proteínas de suero de leche concentrado, isoladas, veganas. Monohidrato de creatina puro y/o micronizado, multivitamínicos, bebidas energéticas, barritas de proteína, entre otros.">
-    <meta name="keywords" content="Proteina, Creatina, Omega 3, Pre Entreno, Aminoacidos, ZMA, Suplementos, Suplementos Deportivos">
+    <meta name="description"
+        content="Encuentra proteínas de suero de leche concentrado, isoladas, veganas. Monohidrato de creatina puro y/o micronizado, multivitamínicos, bebidas energéticas, barritas de proteína, entre otros.">
+    <meta name="keywords"
+        content="Proteina, Creatina, Omega 3, Pre Entreno, Aminoacidos, ZMA, Suplementos, Suplementos Deportivos">
     <!-- Icono -->
     <link rel="icon" type="image/png" href="../img/icon/icono.png">
     <!-- Bootstrap -->
@@ -22,7 +24,9 @@
 
 <body>
     <nav class="navbar">
-        <a href="../index.html" class="titulo-nav link-item"><h2>VF</h2></a>
+        <a href="../index.html" class="titulo-nav link-item">
+            <h2>VF</h2>
+        </a>
         <a href="#" class="toggle-button">
             <i class="fa fa-bars" style="font-size: 35px;"></i>
         </a>
@@ -56,7 +60,8 @@
                 </div>
             </div>
             <div class="articulo">
-                <img class="img img_animate" src="../img/suplementos-optimizados/pre-entreno-w-nutrition.jpg" alt="Pre-Workout Winkler Nutrition">
+                <img class="img img_animate" src="../img/suplementos-optimizados/pre-entreno-w-nutrition.jpg"
+                    alt="Pre-Workout Winkler Nutrition">
                 <div class="articulo-contenido">
                     <h5>Pre-Workout W Nutrition</h5>
                     <p>$21.000</p>
@@ -64,7 +69,8 @@
                 </div>
             </div>
             <div class="articulo">
-                <img class="img img_animate" src="../img/suplementos-optimizados/bcaa-universal.jpg" alt="BCAAs Universal">
+                <img class="img img_animate" src="../img/suplementos-optimizados/bcaa-universal.jpg"
+                    alt="BCAAs Universal">
                 <div class="articulo-contenido">
                     <h5>BCAAs Universal</h5>
                     <p>$49.000</p>
@@ -128,7 +134,8 @@
                 </div>
             </div>
             <div class="articulo">
-                <img class="img img_animate" src="../img/suplementos-optimizados/creatina-platinum.jpg" alt="Creatina platinum">
+                <img class="img img_animate" src="../img/suplementos-optimizados/creatina-platinum.jpg"
+                    alt="Creatina platinum">
                 <div class="articulo-contenido">
                     <h5>Creatina Platinum</h5>
                     <p>$34.500</p>
@@ -136,15 +143,15 @@
                 </div>
             </div>
         </section>
-        
+
     </main>
 
     <footer class="text-center text-lg-start text-muted bg-nav-footer">
         <section class="d-flex justify-content-center justify-content-lg-between p-4">
-            <div class="me-5 d-none d-lg-block">
+            <div class="me-5 d-none d-lg-block" data-aos="fade-up" data-aos-duration="1500">
                 <span class="texto-nav-footer">Síguenos en nuestras tedes sociales</span>
             </div>
-            <div class="texto-nav-footer">
+            <div class="texto-nav-footer" data-aos="fade-up" data-aos-duration="1500">
                 <a href="#" class="me-4 text-reset"> <i class="fab fa-facebook-f"></i> </a>
                 <a href="#" class="me-4 text-reset"> <i class="fab fa-twitter"></i> </a>
                 <a href="#" class="me-4 text-reset"> <i class="fab fa-google"></i> </a>
@@ -153,24 +160,21 @@
                 <a href="#" class="me-4 text-reset"> <i class="fab fa-github"></i> </a>
             </div>
         </section>
-        <section class="">
+        <section>
             <div class="container text-center d-flex justify-content-center text-md-start mt-5">
                 <div class="row mt-3">
-                    <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-2 f-title">
-                        <h2 class="text-uppercase fw-bold mb-4 texto-nav-footer">VF</h2>
-                    </div>
-                    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <div class="col-md-2 col-lg-2 col-xl-5 mx-auto mb-4">
                         <h6 class="text-uppercase fw-bold mb-4 texto-nav-footer"> ¿Quiénes Somos? </h6>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate repudiandae commodi
-                            recusandae repellendus, ratione voluptatum perferendis, dolore perspiciatis, ipsam officiis
-                            suscipit repellat eligendi minus corrupti iusto quibusdam molestiae expedita voluptatem?</p>
+                        <p>VF Suplementos nace el 2020 en Pucón, en un comienzo con la venta exclusiva de suplementos de
+                            marcas chilenas, para luego expandir la gama de productos a las mejores marcas
+                            internacionales. Hoy en día, somos importadores directos y representantes exclusivos de
+                            marcas líderes en suplementos.</p>
 
                     </div>
-                    <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-                        <h6 class="text-uppercase fw-bold mb-4 texto-nav-footer">. . .</h6>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo iste eius at, sequi error odio
-                            quod vel ut voluptas, quia ea quam saepe enim atque neque explicabo voluptatum magni
-                            reiciendis.</p>
+                    <div class="col-md-3 col-lg-2 col-xl-4 mx-auto mb-4">
+                        <h6 class="text-uppercase fw-bold mb-4 texto-nav-footer">Te promocionamos!</h6>
+                        <p>Si eres una marca que necesita ser promocionada, contáctanos al correo:
+                            promocion.correo@gmail.com</p>
                     </div>
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                         <h6 class="text-uppercase fw-bold mb-4 texto-nav-footer">Contacto</h6>
@@ -182,7 +186,9 @@
             </div>
         </section>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="../js/script.js"></script>
 
