Se quitan los lorem

--- a/vistas/marcas.html
+++ b/vistas/marcas.html
@@ -43,8 +43,8 @@
     <section class="container container-principal mt-2" data-aos="fade-up" data-aos-duration="3000">
         <img src="../img/sections/workout.jpg" class="img-principal" alt="Imagen principal">
     </section>
-    <main class="mt-4" data-aos="fade-up" data-aos-duration="3000">
-        <section class="info-marca">
+    <main class="mt-4" >
+        <section class="info-marca" data-aos="fade-up" data-aos-duration="1000">
             <div>
                 <h2>Optimum Nutrition</h2>
                 <p>Por más. Durante 30 años, <strong>Optimum Nutrition®</strong> ha sido la marca en la que confían los
@@ -53,7 +53,7 @@
             </div>
             <img class="img_animate" src="../img/marcas-optimizado/gold-standart.jpg" alt="Optimum Nutrition">
         </section>
-        <section class="info-marca">
+        <section class="info-marca" data-aos="fade-up" data-aos-duration="1000">
             <div>
                 <h2>USN</h2>
                 <p>Durante más de 20 años, USN se ha comprometido a apoyar todos los estilos de vida de fitness a través
@@ -63,7 +63,7 @@
             </div>
             <img src="../img/marcas-optimizado/usn.jpg" class="img_animate" alt="USN">
         </section>
-        <section class="info-marca">
+        <section class="info-marca" data-aos="fade-up" data-aos-duration="1000">
             <div>
                 <h2>Muscletech</h2>
                 <p>Como marca líder en el espacio de la nutrición científica, <strong>MuscleTech®</strong> tiene una
@@ -75,7 +75,7 @@
             </div>
             <img src="../img/marcas-optimizado/muscletech.png" class="img_animate" alt="Muscletech">
         </section>
-        <section class="info-marca">
+        <section class="info-marca" data-aos="fade-up" data-aos-duration="1000">
             <div>
                 <h2>Rule 1</h2>
                 <p><strong>QUALITY IS RULE 1</strong>.</p>
@@ -88,7 +88,7 @@
             </div>
             <img src="../img/marcas-optimizado/rule-one.png" class="img_animate" alt="Rule 1">
         </section>
-        <section class="info-marca">
+        <section class="info-marca" data-aos="fade-up" data-aos-duration="1000">
             <div>
                 <h2>Ultimate Nutrition</h2>
                 <p>Nuestro equipo de científicos expertos, formuladores y químicos de sabores se unen para desarrollar
@@ -97,7 +97,7 @@
             </div>
             <img src="../img/marcas-optimizado/ultimate-nutrition.png" class="img_animate" alt="Ultimate Nutrition">
         </section>
-        <section class="info-marca">
+        <section class="info-marca" data-aos="fade-up" data-aos-duration="500">
             <div>
                 <h2>Winkler Nutrition</h2>
                 <p>Somos una empresa nacional dedicada a desarrollar, elaborar y comercializar una amplia gama de
@@ -126,17 +126,17 @@
         <section>
             <div class="container text-center d-flex justify-content-center text-md-start mt-5">
                 <div class="row mt-3">
-                    <div class="col-md-2 col-lg-2 col-xl-5 mx-auto mb-4">
+                    <div class="col-md-2 col-lg-2 col-xl-5 mx mb-4 text-left">
                         <h6 class="text-uppercase fw-bold mb-4 texto-nav-footer"> ¿Quiénes Somos? </h6>
-                        <p>VF Suplementos nace el 2020 en Pucón, en un comienzo con la venta exclusiva de suplementos de
+                        <p>VF Suplementos nace el 2020 en Pucón, en un comienzo con la venta exclusiva de suplementos de 
                             marcas chilenas, para luego expandir la gama de productos a las mejores marcas
                             internacionales. Hoy en día, somos importadores directos y representantes exclusivos de
                             marcas líderes en suplementos.</p>
 
                     </div>
-                    <div class="col-md-3 col-lg-2 col-xl-4 mx-auto mb-4">
+                    <div class="col-md-3 col-lg-2 col-xl-4 mx-auto mb-4 text-left">
                         <h6 class="text-uppercase fw-bold mb-4 texto-nav-footer">Te promocionamos!</h6>
-                        <p>Si eres una marca que necesita ser promocionada, contáctanos al correo:
+                        <p class="text-left">Si eres una marca que necesita ser promocionada, contáctanos al correo:
                             promocion.correo@gmail.com</p>
                     </div>
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
