--- a/vistas/productos.html
+++ b/vistas/productos.html
@@ -163,17 +163,17 @@
         <section>
             <div class="container text-center d-flex justify-content-center text-md-start mt-5">
                 <div class="row mt-3">
-                    <div class="col-md-2 col-lg-2 col-xl-5 mx-auto mb-4">
+                    <div class="col-md-2 col-lg-2 col-xl-5 mx mb-4 text-left">
                         <h6 class="text-uppercase fw-bold mb-4 texto-nav-footer"> ¿Quiénes Somos? </h6>
-                        <p>VF Suplementos nace el 2020 en Pucón, en un comienzo con la venta exclusiva de suplementos de
+                        <p>VF Suplementos nace el 2020 en Pucón, en un comienzo con la venta exclusiva de suplementos de 
                             marcas chilenas, para luego expandir la gama de productos a las mejores marcas
                             internacionales. Hoy en día, somos importadores directos y representantes exclusivos de
                             marcas líderes en suplementos.</p>
 
                     </div>
-                    <div class="col-md-3 col-lg-2 col-xl-4 mx-auto mb-4">
+                    <div class="col-md-3 col-lg-2 col-xl-4 mx-auto mb-4 text-left">
                         <h6 class="text-uppercase fw-bold mb-4 texto-nav-footer">Te promocionamos!</h6>
-                        <p>Si eres una marca que necesita ser promocionada, contáctanos al correo:
+                        <p class="text-left">Si eres una marca que necesita ser promocionada, contáctanos al correo:
                             promocion.correo@gmail.com</p>
                     </div>
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
