--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
                 </div>
                 <div class="aviso-contenido">
                     <h3>Recomendaciones</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt facilis assumenda ratione
-                        asperiores doloribus aperiam?</p>
+                    <p>Si estás comenzando en el mundo de la suplementación, te recomendamos que te orientes primero según tu objetivo y tus requerimientos nutricionales!</p>
                 </div>
             </div>
             <div class="aviso" data-aos="fade-up" data-aos-duration="2000">
@@ -94,8 +93,7 @@
                 </div>
                 <div class="aviso-contenido">
                     <h3>Envios y Entregas</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex architecto quasi sit, recusandae
-                        repudiandae sequi.</p>
+                    <p>Realizamos envíos a todo Chile. Los días lunes y miércoles a las 15:00 entregamos los pedidos a la empresa transportista. Si cae feriado, el pedido se entregará el día siguiente. Para retiros, acércate al local ubicado en el Gran Hotel Pucón con la boleta que recibiste en tu correo. </p>
                 </div>
             </div>
         </section>
@@ -201,17 +199,17 @@
         <section>
             <div class="container text-center d-flex justify-content-center text-md-start mt-5">
                 <div class="row mt-3">
-                    <div class="col-md-2 col-lg-2 col-xl-5 mx-auto mb-4">
+                    <div class="col-md-2 col-lg-2 col-xl-5 mx mb-4 text-left">
                         <h6 class="text-uppercase fw-bold mb-4 texto-nav-footer"> ¿Quiénes Somos? </h6>
-                        <p>VF Suplementos nace el 2020 en Pucón, en un comienzo con la venta exclusiva de suplementos de
+                        <p>VF Suplementos nace el 2020 en Pucón, en un comienzo con la venta exclusiva de suplementos de 
                             marcas chilenas, para luego expandir la gama de productos a las mejores marcas
                             internacionales. Hoy en día, somos importadores directos y representantes exclusivos de
                             marcas líderes en suplementos.</p>
 
                     </div>
-                    <div class="col-md-3 col-lg-2 col-xl-4 mx-auto mb-4">
+                    <div class="col-md-3 col-lg-2 col-xl-4 mx-auto mb-4 text-left">
                         <h6 class="text-uppercase fw-bold mb-4 texto-nav-footer">Te promocionamos!</h6>
-                        <p>Si eres una marca que necesita ser promocionada, contáctanos al correo:
+                        <p class="text-left">Si eres una marca que necesita ser promocionada, contáctanos al correo:
                             promocion.correo@gmail.com</p>
                     </div>
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
@@ -223,7 +221,6 @@
                 </div>
             </div>
         </section>
-
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
