Se crea la vista login

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <li class="link-item"><a href="vistas/contacto.html">Contacto</a></li>
                 <li class="link-item"><a href="vistas/marcas.html">Marcas</a></li>
                 <li class="link-item"><a href="vistas/preguntas_frecuentes.html">Preguntas Frecuentes</a></li>
-                <li><button class="boton-cuenta">Cuenta</button></li>
+                <li><a class="boton-cuenta" href="vistas/login.html">Cuenta</a></li>
             </ul>
         </div>
     </nav>
