--- a/vistas/productos.html
+++ b/vistas/productos.html
@@ -36,7 +36,7 @@
                 <li class="link-item"><a href="contacto.html">Contacto</a></li>
                 <li class="link-item"><a href="marcas.html">Marcas</a></li>
                 <li class="link-item"><a href="preguntas_frecuentes.html">Preguntas Frecuentes</a></li>
-                <li><button class="boton-cuenta">Cuenta</button></li>
+                <li><a class="boton-cuenta" href="login.html">Cuenta</a></li>
             </ul>
         </div>
     </nav>
