--- a/vistas/login.html
+++ b/vistas/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VF - Contacto</title>
+    <title>VF - Login</title>
     <meta name="description"
         content="Ubícanos en el local N°150 dentro del Hotel Pucón, C. Clemente Holzapfel #190. Y en todas nuestras redes sociales, con el nombre de usuario @_vf_suplementos_">
     <meta name="keywords" content="VF Suplementos, @_vf_suplementos_">
@@ -36,41 +36,31 @@
                 <li class="link-item"><a href="#">Contacto</a></li>
                 <li class="link-item"><a href="marcas.html">Marcas</a></li>
                 <li class="link-item"><a href="preguntas_frecuentes.html">Preguntas Frecuentes</a></li>
-                <li><a class="boton-cuenta" href="login.html">Cuenta</a></li>
+                <li><button class="boton-cuenta">Cuenta</button></li>
             </ul>
         </div>
     </nav>
     <main class="contenedor-contacto">
-        <h2>Formulario de Contacto</h2>
-        <section class="section-contacto">
+        <h2>Inicia sesión</h2>
+        <p>Podrás ver tus compras, direcciones de envío, cupones de descuento y más.</p>
+        <section class="section-login">
             <form action="#">
-                <div class="form-group my-2">
-                    <label for="nombre_completo">Nombre Completo</label>
-                    <input name="nombre_completo" type="text" class="form-control" placeholder="Ingresa tu nombre ...">
-                </div>
                 <div class="form-group my-2">
                     <label for="correo">Correo Electrónico</label>
                     <input name="correo" type="email" class="form-control" placeholder="Ingresa tu correo ...">
                 </div>
                 <div class="form-group my-2">
-                    <label for="ciudad">Teléfono</label>
-                    <input name="ciudad" type="text" class="form-control"
-                        placeholder="Ingresa tu número de teléfono ...">
-                </div>
-                <div class="form-group my-2">
-                    <label for="consulta">Duda / Consulta</label>
-                    <textarea name="consulta" class="form-control" cols="100" rows="4"
-                        placeholder="Cuéntanos ..."></textarea>
+                    <label for="clave">Contraseña</label>
+                    <input name="clave" type="password" class="form-control"
+                        placeholder="Ingresa tu contraseña ...">
                 </div>
                 <div class="form-group my-2 d-flex justify-content-end">
-                    <button class="boton-cuenta mx-auto">Enviar</button>
+                    <button class="boton-cuenta mx-auto">Ingresar</button>
+                </div>
+                <div class="form-group my-2 d-flex justify-content-end">
+                    <a class="mx-auto" href="#">¿No tienes cuenta? Regístrate aquí</a>
                 </div>
             </form>
-            <div class="iframe">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3088.6947815180297!2d-71.98056642397356!3d-39.27249131880792!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x96147f40df00576d%3A0xc4f281cfaeab4cf1!2sHotel%20Enjoy%20Puc%C3%B3n!5e0!3m2!1ses-419!2scl!4v1691974854272!5m2!1ses-419!2scl"
-                    frameborder="0"></iframe>
-            </div>
         </section>
     </main>
     <footer class="text-center text-lg-start text-muted bg-nav-footer">
