--- a/vistas/preguntas_frecuentes.html
+++ b/vistas/preguntas_frecuentes.html
@@ -37,7 +37,7 @@
                 <li class="link-item"><a href="contacto.html">Contacto</a></li>
                 <li class="link-item"><a href="marcas.html">Marcas</a></li>
                 <li class="link-item"><a href="#">Preguntas Frecuentes</a></li>
-                <li><button class="boton-cuenta">Cuenta</button></li>
+                <li><a class="boton-cuenta" href="login.html">Cuenta</a></li>
             </ul>
         </div>
     </nav>
